<resources>
    <string name="app_name">ProjetoCalculadora</string>
    <string name="numero_0">0</string>
    <string name="numero_1">1</string>
    <string name="numero_2">2</string>
    <string name="numero_3">3</string>
    <string name="numero_4">4</string>
    <string name="numero_5">5</string>
    <string name="numero_6">6</string>
    <string name="numero_7">7</string>
    <string name="numero_8">8</string>
    <string name="numero_9">9</string>
    <string name="numero_ponto">.</string>
    <string name="numero_apagar">Apagar</string>
    <string name="operacao_adicao">+</string>
    <string name="operacao_subtracao">-</string>
    <string name="operacao_multiplicacao">*</string>
    <string name="operacao_divisao">/</string>
    <string name="operacao_porcentagem">%</string>
    <string name="operacao_igual">=</string>
</resources>